add jwt token to login
